--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,6 @@
     <version>5.15.0</version>
 </dependency>
 
-
         <!-- TestNG dependency -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -90,5 +89,15 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.16</version>
         </dependency>
+        
+        
+      <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>3.0.0-beta3</version>
+</dependency>
+
+
   </dependencies>
 </project>
