--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -1,3 +1,6 @@
 browser=chrome
 url = https://dsportalapp.herokuapp.com
-#excelFilePath =./src/test/resources/Excel/TestData.xlsx
+urlHome = https://dsportalapp.herokuapp.com/home
+username = teamachievers
+password = Welcome@1
+urlTree =  https://dsportalapp.herokuapp.com/tree/
