--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -4,3 +4,4 @@ urlHome = https://dsportalapp.herokuapp.com/home
 username = teamachievers
 password = Welcome@1
 urlTree =  https://dsportalapp.herokuapp.com/tree/
+urlGraph = https://dsportalapp.herokuapp.com/graph/
