--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -9,3 +9,5 @@ urlTimeComplexity = https://dsportalapp.herokuapp.com/data-structures-introducti
 urlDataStructuresIntroduction = https://dsportalapp.herokuapp.com/data-structures-introduction/
 urlDataStructuresIntroPracticeQns = https://dsportalapp.herokuapp.com/data-structures-introduction/practice
 #excelFilePath =./src/test/resources/Excel/TestData.xlsx
+urlLinkedList = https://dsportalapp.herokuapp.com/linked-list/
+urlArray = https://dsportalapp.herokuapp.com/array/
