--- a/src/test/resources/Config/config.properties
+++ b/src/test/resources/Config/config.properties
@@ -4,4 +4,5 @@ urlHome = https://dsportalapp.herokuapp.com/home
 username = teamachievers
 password = Welcome@1
 urlTree =  https://dsportalapp.herokuapp.com/tree/
-urlGraph = https://dsportalapp.herokuapp.com/graph/
+urlStack = https://dsportalapp.herokuapp.com/stack/
+urlQueue = https://dsportalapp.herokuapp.com/queue/
