update changes with allure report

--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,7 @@
                 <executions>
         <execution>
             <goals>
+               <goal>clean</goal>
                 <goal>report</goal>
             </goals>
         </execution>
