--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,35 @@
 			<artifactId>poi</artifactId>
 			<version>5.3.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
+<dependency>
+
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.5.2</version>
+</dependency>
+
+
+<dependency><plugin>
+   <groupId>org.apache.maven.plugins</groupId>
+   <artifactId>maven-surefire-plugin</artifactId>
+   <version> 3.1.0- M7</version>
+   <configuration>
+<parallel>methods</parallel>
+<useUnlimitedThreads>True</useUnlimitedThreads>
+
+</configuration>
+</plugin>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.14.0</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
@@ -80,6 +109,13 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>2.0.9</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-picocontainer</artifactId>
+    <version>7.21.1</version>
+    <scope>test</scope>
+</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
@@ -105,6 +141,13 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.18.2</version>
 		</dependency>
+		<dependency>
+			<groupId>HelloSelenium</groupId>
+			<artifactId>HelloSelenium</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	
+	
 </project>
 
